# jk-ai-cli

./: .gitignore  install.sh  main.py  pyproject.toml  run_test  setup_w.sh
apps/jk-ai-chat/: pyproject.toml
apps/jk-ai-chat/src/jk_ai_chat/: cli.py  entrypoints.py  main_.py
apps/jk-ai-chat/src/jk_ai_chat/commands/: chat.py  editor.py  init.py
apps/lab/: pyproject.toml
apps/lab/src/lab/: check_registry.py  check_usage.py  debug_orchestrator.py  gemini_api.py  openai_api.py  test_all_cached_models.py  test_auto_question.py  test_embeddings.py  test_gemini_client.py  test_key_rotation.py  test_prompts.py  test_search.py
libs/jk-core/: pyproject.toml
libs/jk-core/src/jk_core/: ai_client.py  constants.py  key_manager.py  model_registry.py  model_tester.py  orchestrator.py  prompt_engine.py  search_engine.py  session_manager.py
libs/jk-core/src/jk_core/prompts/: config.yaml
libs/jk-core/src/jk_core/prompts/01_base/: general_expert.md
libs/jk-core/src/jk_core/prompts/02_roles/: professor.md
libs/jk-core/src/jk_core/prompts/03_modules/: syllabus_gen.md
libs/jk-core/src/jk_core/prompts/04_formats/: markdown_report.md
libs/jk-core/src/jk_core/providers/: base.py  google.py
libs/jk-core/tests/: README.md  conftest.py  test_key_manager.py  test_orchestrator.py  test_search_engine.py  test_session_manager.py
