[project]
name = "lab"
version = "0.1.0"
dependencies = [
    "jk-core",
    "jinja2",
    "pyyaml",
    "click>=8.3.1",
]

[tool.uv.sources]
jk-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

